--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -11,3 +11,5 @@ $color-background-new: #99e2d0;
 $color-background-new_title: #008766;
 $color-arrow-left: #353535;
 
+$color-background-btn-hover: #f5edff;
+
